--- a/Lesson3/SignIn_4/style.css
+++ b/Lesson3/SignIn_4/style.css
@@ -20,7 +20,6 @@
 .container .box {
   display: flex;
   justify-content: center;
-  align-items: center;
   border-radius: 5px;
   width: 80%;
   height: 7in;
@@ -83,9 +82,45 @@
   width: 100%;
 }
 .container .box .right .content form {
+  margin: 100px 45px;
 }
 .container .box .right .content form .section {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+}
+.container .box .right .content form .section .lab label {
+  color: gray;
+  padding: 5px;
+}
+.container .box .right .content form .section .lab input {
+  width: 200px;
+  height: 50px;
+  border: 1px solid #9b9b9b;
+  margin: 10px 0px;
+}
+
+.container .box .right .content form .main .space {
+  margin: 10px 0px;
+}
+.container .box .right .content form .main .space label {
+  color: gray;
+  padding: 5px;
+}
+.container .box .right .content form .main .space input {
+  width: 400px;
+  height: 50px;
+  border: 1px solid #9b9b9b;
+  margin: 10px 0px;
+}
+.container .box .right .content form .sub {
+  text-align: center;
+  margin: 30px 0px;
+}
+.container .box .right .content form .sub input[type="submit"] {
+  padding: 15px 150px;
+  background-color: green;
+  border: none;
+  border-radius: 5px;
+  color: white;
 }
